# rag-framework

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  dev_spec_v8.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/skills/: checkpoint.md  dev-workflow.md  implement.md
.github/workflows/: ci.yml
configs/: settings.yaml
configs/chunking/: anchors.yaml  resync.yaml
configs/connectors/: sources.yaml
configs/profiles/: local_fast.yaml  local_quality.yaml
configs/prompts/: grounded_answer.txt  llm_rerank.txt
rag/cli/: eval.py  (+2 more)
scripts/: beir_eval.py
tests/: conftest.py  test_anchor_annotator.py  test_answer_composer_basic.py  test_batching.py  test_block_diff.py  test_block_splitter.py  test_bm25_local.py  test_chunk_packer.py  test_cleaner_dedupe.py  test_cleaner_empty.py  test_cleaner_html.py  test_cleaner_ocr.py  test_cleaner_pdf_headers.py  test_cleaner_pipeline.py  test_cleaner_unicode.py  test_cli_eval.py  test_cli_ingest.py  test_cli_query.py  test_config_loader.py  test_connector_sync_pipeline.py  test_context_packer_light.py  test_contracts_answer.py  test_contracts_chunk.py  test_contracts_document.py  test_docstore_schema.py  test_docstore_sqlite.py  test_email_connector.py  test_embedding_factory.py  test_eval_efficiency.py  test_eval_pipeline.py  test_faiss_local.py  test_google_docs_connector.py  test_hashing.py  test_html_parser.py  test_index_manager.py  test_ingest_pipeline.py  test_ingestion_manager_page.py  test_interfaces_ingestion.py  test_interfaces_retrieval.py  test_interfaces_storage_gen.py  (+35 more)
(+119 files in other folders)
